--- a/InstagramChallenge/Base.lproj/Main.storyboard
+++ b/InstagramChallenge/Base.lproj/Main.storyboard
@@ -450,7 +450,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="oGq-1U-7dD">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCellID" id="oGq-1U-7dD">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -1191,23 +1191,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ts2-Il-H04" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="307.5" y="1130"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="V5J-TT-Jb8">
-            <objects>
-                <viewController id="CRd-dH-hLb" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="nAT-7A-u3c"/>
-                        <viewControllerLayoutGuide type="bottom" id="piM-29-lTg"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="bqE-n0-bVT">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GBb-sC-WqO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
         </scene>
     </scenes>
 </document>
